reference/k/snapshots/literals-integer-with-underscores.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-integer-with-underscores.cdz
---
# literals-integer-with-underscores

## Input

```cadenza
1_000_000
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 105 110 116 101 103 101 114 45 119 105 116 104 45 117 110 100 101 114 115 99 111 114 101 115 46 99 100 122) (Span (0 9) (Integer 1000000)))
```

## Expected

```
1_000_000 : Integer
```

## K Output

```
<generatedTop>
  <k>
    1000000 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/literals-integer-with-underscores.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    9
  </span-end>
</generatedTop>
```

