reference/k/snapshots/literals-mixed-arithmetic-_rational-_-integer_.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-mixed-arithmetic-_rational-_-integer_.cdz
---
# literals-mixed-arithmetic-_rational-_-integer_

## Input

```cadenza
1/2 + 1
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 109 105 120 101 100 45 97 114 105 116 104 109 101 116 105 99 45 95 114 97 116 105 111 110 97 108 45 95 45 105 110 116 101 103 101 114 95 46 99 100 122) (Span (0 7) (Apply (Op 43) (Apply (Op 47) (Integer 1) (Integer 2)) (Integer 1))))
```

## Expected

```
3/2 : Rational
```

## K Output

```
<k>
  1 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/literals-mixed-arithmetic-_rational-_-integer_.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  7
</span-end>
```

