reference/k/snapshots/literals-simple-integer.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-simple-integer.cdz
---
# literals-simple-integer

## Input

```cadenza
42
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 115 105 109 112 108 101 45 105 110 116 101 103 101 114 46 99 100 122) (Span (0 2) (Integer 42)))
```

## Expected

```
42 : Integer
```

## K Output

```
<k>
  42 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/literals-simple-integer.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  2
</span-end>
```

