reference/k/snapshots/literals-string-with-escape-sequences.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-string-with-escape-sequences.cdz
---
# literals-string-with-escape-sequences

## Input

```cadenza
"Line 1\nLine 2\tTabbed"
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 115 116 114 105 110 103 45 119 105 116 104 45 101 115 99 97 112 101 45 115 101 113 117 101 110 99 101 115 46 99 100 122) (Span (0 24) (String 76 105 110 101 32 49 10 76 105 110 101 32 50 9 84 97 98 98 101 100)))
```

## Expected

```
"Line 1
Line 2	Tabbed" : String
```

## K Output

```
<generatedTop>
  <k>
    "Line 1\nLine 2\tTabbed" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/literals-string-with-escape-sequences.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    24
  </span-end>
</generatedTop>
```

