reference/k/snapshots/literals-string-with-mathematical-symbols.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-string-with-mathematical-symbols.cdz
---
# literals-string-with-mathematical-symbols

## Input

```cadenza
"∀x ∈ ℝ: x² ≥ 0"
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 115 116 114 105 110 103 45 119 105 116 104 45 109 97 116 104 101 109 97 116 105 99 97 108 45 115 121 109 98 111 108 115 46 99 100 122) (Span (0 25) (String 8704 120 32 8712 32 8477 58 32 120 178 32 8805 32 48)))
```

## Expected

```
"∀x ∈ ℝ: x² ≥ 0" : String
```

## K Output

```
<generatedTop>
  <k>
    "\xe2\x88\x80x \xe2\x88\x88 \xe2\x84\x9d: x\xb2 \xe2\x89\xa5 0" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/literals-string-with-mathematical-symbols.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    25
  </span-end>
</generatedTop>
```

