reference/k/snapshots/literals-string-with-quote-escape.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-string-with-quote-escape.cdz
---
# literals-string-with-quote-escape

## Input

```cadenza
"She said \"hello\""
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 115 116 114 105 110 103 45 119 105 116 104 45 113 117 111 116 101 45 101 115 99 97 112 101 46 99 100 122) (Span (0 20) (String 83 104 101 32 115 97 105 100 32 34 104 101 108 108 111 34)))
```

## Expected

```
"She said \"hello\"" : String
```

## K Output

```
<k>
  "She said \"hello\"" ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/literals-string-with-quote-escape.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  20
</span-end>
```

