reference/k/snapshots/literals-string-with-spaces.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-string-with-spaces.cdz
---
# literals-string-with-spaces

## Input

```cadenza
"hello world"
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 115 116 114 105 110 103 45 119 105 116 104 45 115 112 97 99 101 115 46 99 100 122) (Span (0 13) (String 104 101 108 108 111 32 119 111 114 108 100)))
```

## Expected

```
"hello world" : String
```

## K Output

```
<generatedTop>
  <k>
    "hello world" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/literals-string-with-spaces.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    13
  </span-end>
</generatedTop>
```

