reference/k/snapshots/literals-string-with-unicode.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-string-with-unicode.cdz
---
# literals-string-with-unicode

## Input

```cadenza
"Hello, 世界! 🌍"
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 115 116 114 105 110 103 45 119 105 116 104 45 117 110 105 99 111 100 101 46 99 100 122) (Span (0 21) (String 72 101 108 108 111 44 32 19990 30028 33 32 127757)))
```

## Expected

```
"Hello, 世界! 🌍" : String
```

## K Output

```
<generatedTop>
  <k>
    "Hello, \xe4\xb8\x96\xe7\x95\x8c! \xf0\x9f\x8c\x8d" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/literals-string-with-unicode.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    21
  </span-end>
</generatedTop>
```

